# governing-landscape

./: .gitignore  Cargo.toml  LICENSE  README.md  attributions.md  references.bib  rust-toolchain.toml
crates/governing-landscape/: Cargo.toml  README.md
crates/governing-landscape-py/: Cargo.toml  README.md  pyproject.toml
crates/governing-landscape-py/python/governing_landscape/: __init__.py
crates/governing-landscape-py/src/: lib.rs
crates/governing-landscape-py/tests/: test_smoke.py
crates/governing-landscape/src/: align.rs  features.rs  fusion.rs  graph.rs  lib.rs  splat.rs
data/sites/great-mosque-kilwa/: README.md  manifest.toml
data/sites/great-zimbabwe/: README.md  manifest.toml
data/sites/moulay-brahim/: manifest.toml
data/sites/ojubo-osogbo/: README.md  manifest.toml
docs/audits/: 2026-05-06-colmap-on-wikimedia-fails.md  2026-05-06-site-imagery-audit.md
docs/handoffs/: CONTINUATION-2026-06-08-ojubo-osogbo-oh3d.md
docs/specs/: 2026-05-06-impl-spec-layers-2-4.md  2026-06-19-oom-guards-design.md
examples/: _memcage.py  e57_to_ply.py  m1_bucketed.py  m1_demo.py  m1_reconstruct.py
examples/tests/: test_e57_to_ply.py  test_memcage.py
paper/: main.tex
scripts/: fetch_moulay_brahim.py
