[package]
name          = "governing-landscape-py"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
authors       = { workspace = true }
description   = "PyO3 bindings for governing-landscape (built for PyPI via maturin; not a consumable Rust crate)"
publish       = false

[lib]
name       = "_core"
crate-type = ["cdylib"]

[dependencies]
governing-landscape = { path = "../governing-landscape", version = "0.1.0" }
ndarray             = { workspace = true }
pyo3                = { workspace = true }
numpy               = { workspace = true }
